feat: Final project structure, tests and logging configuration